<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, mainActivity!</string>
    <string name="app_name">Smart Calculator</string>
    <string name="copyright">The copyright.........</string>
    <string name="help_text">empty  </string>
    <string name="link_text">http://www.niithanoi.vn</string>
    
    <string name="duong_name">Nguyễn Đại Dương</string>
    <string name="school">CĐ CN HN</string>
    <string name="duong_telephone">0942082891</string>
    
    <string name="cuong_name">Nguyễn Quốc Cường</string>
    <string name="cuong_telephone">01649649730</string>
    
    <string name="dieu_name">Bùi Thị Hồng Diệu</string>
    <string name="dieu_school">ĐH BK Hà Nội</string>
    <string name="dieu_telephone">01649606949</string>
    
    <string name="vuong_name">Đỗ Quốc Vương</string>
    <string name="vuong_telephone">01658768845</string>
    
    <string name="long_name">Hoàng Quốc Long</string>
    <string name="long_telephone">1679688998</string>
    
    
    <string name="sqrt_sign">\u221a</string>

</resources>